[gd_scene load_steps=8 format=3 uid="uid://crc4jtxi1nwer"]

[ext_resource type="Theme" uid="uid://c7qjkrab2qnam" path="res://scenes/ui/main_menu/main_menu_theme.tres" id="1_tkti0"]
[ext_resource type="Script" uid="uid://bd3w1iujyd4o" path="res://scenes/ui/main_menu/submenus/settings_sub_menu.gd" id="2_tkti0"]
[ext_resource type="StyleBox" uid="uid://cyrgt5fvo3qxp" path="res://scenes/ui/trinket_menu/trinket_menu_panelcontainer.tres" id="3_u26rb"]
[ext_resource type="Script" uid="uid://s5fns5emnycq" path="res://scenes/ui/main_menu/main_menu_button.gd" id="4_ygpoi"]
[ext_resource type="PackedScene" uid="uid://tckcirwh33nh" path="res://components/ui/footnote/explainer_footnote.tscn" id="5_gfgi6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gfgi6"]
content_margin_left = 8.0
content_margin_top = 2.0
content_margin_right = 8.0
content_margin_bottom = 2.0
bg_color = Color(0, 0, 0, 0.49803922)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gfgi6"]

[node name="SettingsSubMenu" type="Control" node_paths=PackedStringArray("footnote")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_tkti0")
script = ExtResource("2_tkti0")
footnote = NodePath("Footnote")
metadata/_custom_type_script = "uid://dl472b4rhvohb"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="CenterContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="GENERAL" type="PanelContainer" parent="CenterContainer/VBoxContainer2/TabContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("3_u26rb")
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer2/TabContainer/GENERAL"]
layout_mode = 2

[node name="MouseSensLabel" type="Label" parent="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 1
text = "Mouse Sensitivity"

[node name="MouseSensSlider" type="HSlider" parent="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 6.0
step = 0.01
value = 3.0
tick_count = 13
ticks_on_borders = true

[node name="FovLabel" type="Label" parent="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 1
text = "Field of View"

[node name="FovSlider" type="HSlider" parent="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 30.0
max_value = 110.0
value = 90.0
tick_count = 13
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HeadBobLabel" type="Label" parent="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 1
text = "Head Bobbing"

[node name="HeadBobOptions" type="OptionButton" parent="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Enabled"
popup/item_1/id = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ConsoleLabel" type="Label" parent="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer/HBoxContainer2/MarginContainer"]
layout_mode = 2
mouse_filter = 1
text = "Enable Developer Console"

[node name="ConsoleOptions" type="OptionButton" parent="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Enabled"
popup/item_1/id = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DebugLabel" type="Label" parent="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer/HBoxContainer3/MarginContainer"]
layout_mode = 2
mouse_filter = 1
text = "Show Debug"

[node name="DebugOptions" type="OptionButton" parent="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Enabled"
popup/item_1/id = 1

[node name="AUDIO" type="PanelContainer" parent="CenterContainer/VBoxContainer2/TabContainer"]
visible = false
layout_mode = 2
theme_override_styles/panel = ExtResource("3_u26rb")
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer2/TabContainer/AUDIO"]
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="CenterContainer/VBoxContainer2/TabContainer/AUDIO/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 1
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="CenterContainer/VBoxContainer2/TabContainer/AUDIO/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 2.0
step = 0.05
value = 1.0
tick_count = 13
ticks_on_borders = true

[node name="MusicVolumeLabel" type="Label" parent="CenterContainer/VBoxContainer2/TabContainer/AUDIO/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 1
text = "Music"

[node name="MusicVolumeSlider" type="HSlider" parent="CenterContainer/VBoxContainer2/TabContainer/AUDIO/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 2.0
step = 0.05
value = 1.0
tick_count = 13
ticks_on_borders = true

[node name="EffectsVolumeLabel" type="Label" parent="CenterContainer/VBoxContainer2/TabContainer/AUDIO/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 1
text = "Effects"

[node name="EffectsVolumeSlider" type="HSlider" parent="CenterContainer/VBoxContainer2/TabContainer/AUDIO/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 2.0
step = 0.05
value = 1.0
tick_count = 13
ticks_on_borders = true

[node name="GRAPHICS" type="PanelContainer" parent="CenterContainer/VBoxContainer2/TabContainer"]
visible = false
layout_mode = 2
theme_override_styles/panel = ExtResource("3_u26rb")
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer2/TabContainer/GRAPHICS"]
layout_mode = 2

[node name="RenderScaleLabel" type="Label" parent="CenterContainer/VBoxContainer2/TabContainer/GRAPHICS/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Render Scale"

[node name="RenderScaleSlider" type="HSlider" parent="CenterContainer/VBoxContainer2/TabContainer/GRAPHICS/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 2.0
step = 0.05
value = 1.0
tick_count = 13
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer2/TabContainer/GRAPHICS/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer2/TabContainer/GRAPHICS/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSyncLabel" type="Label" parent="CenterContainer/VBoxContainer2/TabContainer/GRAPHICS/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "V-Sync"

[node name="VSyncOptions" type="OptionButton" parent="CenterContainer/VBoxContainer2/TabContainer/GRAPHICS/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Enabled"
popup/item_1/id = 1
popup/item_2/text = "Adaptive"
popup/item_2/id = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer2/TabContainer/GRAPHICS/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer2/TabContainer/GRAPHICS/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ShadersLabel" type="Label" parent="CenterContainer/VBoxContainer2/TabContainer/GRAPHICS/VBoxContainer/HBoxContainer2/MarginContainer"]
layout_mode = 2
mouse_filter = 1
text = "Shaders"

[node name="ShadersOptions" type="OptionButton" parent="CenterContainer/VBoxContainer2/TabContainer/GRAPHICS/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
selected = 1
item_count = 2
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Enabled"
popup/item_1/id = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_right = 10

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_type_variation = &"MainMenuButton"
text = "RETURN"
script = ExtResource("4_ygpoi")

[node name="Footnote" parent="." instance=ExtResource("5_gfgi6")]
unique_name_in_owner = true
visible = false
z_index = 50
z_as_relative = false
layout_mode = 0

[node name="VolumeHover" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 34.0
offset_bottom = 18.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gfgi6")

[node name="VolumeHoverText" type="Label" parent="VolumeHover"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxEmpty_gfgi6")
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="tab_changed" from="CenterContainer/VBoxContainer2/TabContainer" to="." method="_on_tab_container_tab_changed"]
[connection signal="tab_hovered" from="CenterContainer/VBoxContainer2/TabContainer" to="." method="_on_tab_container_tab_hovered"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer/MouseSensLabel" to="." method="_on_mouse_sens_label_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer/MouseSensLabel" to="." method="_on_hover_stop"]
[connection signal="drag_ended" from="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer/MouseSensSlider" to="." method="_on_drag_ended"]
[connection signal="drag_started" from="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer/MouseSensSlider" to="." method="_on_drag_started"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer/MouseSensSlider" to="." method="_on_mouse_sens_slider_value_changed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer/FovLabel" to="." method="_on_fov_label_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer/FovLabel" to="." method="_on_hover_stop"]
[connection signal="drag_ended" from="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer/FovSlider" to="." method="_on_drag_ended"]
[connection signal="drag_started" from="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer/FovSlider" to="." method="_on_drag_started"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer/FovSlider" to="." method="_on_fov_slider_value_changed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer/HBoxContainer/MarginContainer/HeadBobLabel" to="." method="_on_head_bob_label_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer/HBoxContainer/MarginContainer/HeadBobLabel" to="." method="_on_hover_stop"]
[connection signal="item_selected" from="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer/HBoxContainer/HeadBobOptions" to="." method="_on_head_bob_options_item_selected"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer/HBoxContainer2/MarginContainer/ConsoleLabel" to="." method="_on_console_label_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer/HBoxContainer2/MarginContainer/ConsoleLabel" to="." method="_on_hover_stop"]
[connection signal="item_selected" from="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer/HBoxContainer2/ConsoleOptions" to="." method="_on_console_options_item_selected"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer/HBoxContainer3/MarginContainer/DebugLabel" to="." method="_on_debug_label_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer/HBoxContainer3/MarginContainer/DebugLabel" to="." method="_on_hover_stop"]
[connection signal="item_selected" from="CenterContainer/VBoxContainer2/TabContainer/GENERAL/VBoxContainer/HBoxContainer3/DebugOptions" to="." method="_on_debug_options_item_selected"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer2/TabContainer/AUDIO/VBoxContainer/MasterVolumeLabel" to="." method="_on_master_volume_label_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer2/TabContainer/AUDIO/VBoxContainer/MasterVolumeLabel" to="." method="_on_hover_stop"]
[connection signal="drag_ended" from="CenterContainer/VBoxContainer2/TabContainer/AUDIO/VBoxContainer/MasterVolumeSlider" to="." method="_on_drag_ended"]
[connection signal="drag_started" from="CenterContainer/VBoxContainer2/TabContainer/AUDIO/VBoxContainer/MasterVolumeSlider" to="." method="_on_drag_started"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer2/TabContainer/AUDIO/VBoxContainer/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer2/TabContainer/AUDIO/VBoxContainer/MusicVolumeLabel" to="." method="_on_music_volume_label_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer2/TabContainer/AUDIO/VBoxContainer/MusicVolumeLabel" to="." method="_on_hover_stop"]
[connection signal="drag_ended" from="CenterContainer/VBoxContainer2/TabContainer/AUDIO/VBoxContainer/MusicVolumeSlider" to="." method="_on_drag_ended"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer2/TabContainer/AUDIO/VBoxContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer2/TabContainer/AUDIO/VBoxContainer/EffectsVolumeLabel" to="." method="_on_effects_volume_label_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer2/TabContainer/AUDIO/VBoxContainer/EffectsVolumeLabel" to="." method="_on_hover_stop"]
[connection signal="drag_ended" from="CenterContainer/VBoxContainer2/TabContainer/AUDIO/VBoxContainer/EffectsVolumeSlider" to="." method="_on_drag_ended"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer2/TabContainer/AUDIO/VBoxContainer/EffectsVolumeSlider" to="." method="_on_effects_volume_slider_value_changed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer2/TabContainer/GRAPHICS/VBoxContainer/RenderScaleLabel" to="." method="_on_render_scale_label_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer2/TabContainer/GRAPHICS/VBoxContainer/RenderScaleLabel" to="." method="_on_hover_stop"]
[connection signal="drag_ended" from="CenterContainer/VBoxContainer2/TabContainer/GRAPHICS/VBoxContainer/RenderScaleSlider" to="." method="_on_drag_ended"]
[connection signal="drag_started" from="CenterContainer/VBoxContainer2/TabContainer/GRAPHICS/VBoxContainer/RenderScaleSlider" to="." method="_on_drag_started"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer2/TabContainer/GRAPHICS/VBoxContainer/RenderScaleSlider" to="." method="_on_render_scale_slider_value_changed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer2/TabContainer/GRAPHICS/VBoxContainer/HBoxContainer/MarginContainer/VSyncLabel" to="." method="_on_v_sync_label_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer2/TabContainer/GRAPHICS/VBoxContainer/HBoxContainer/MarginContainer/VSyncLabel" to="." method="_on_hover_stop"]
[connection signal="item_selected" from="CenterContainer/VBoxContainer2/TabContainer/GRAPHICS/VBoxContainer/HBoxContainer/VSyncOptions" to="." method="_on_v_sync_options_item_selected"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer2/TabContainer/GRAPHICS/VBoxContainer/HBoxContainer2/MarginContainer/ShadersLabel" to="." method="_on_shaders_label_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer2/TabContainer/GRAPHICS/VBoxContainer/HBoxContainer2/MarginContainer/ShadersLabel" to="." method="_on_hover_stop"]
[connection signal="item_selected" from="CenterContainer/VBoxContainer2/TabContainer/GRAPHICS/VBoxContainer/HBoxContainer2/ShadersOptions" to="." method="_on_shaders_options_item_selected"]
